--- a/index.html
+++ b/index.html
@@ -7,6 +7,52 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <main class="card">
+        <img class="avatar" src="javascript-lead.jpg" alt="zdjęcie" title="tu będzie moje zdjęcie">
+        <header class="heading">
+        <h1 class="heading__name">Tomasz Zawadzki</h1>
+        <p class="heading__position">
+            uczeń frontendu
+        </p>
+    </header>
+    <section class="description">
+        <h2 class="description__title">Co aktualnie robię:</h2>
+        <p class="description__myself">
+            Aktualnie przedstawiciel handlowy, który potrzebuje nauczyć się czegoś nowego 
+            co może doprowadzić w przyszłości do zmiany soposobu zarabiania na życie.
+            Moje zainteresowania to przede wszystkim sport. Sam gram w piłkę nożną, a jako kibic
+            lubię prawie każdą dyscyplinę sportu. Planuję zwiedzić cały świat. Ostatnie podróże to 
+            Wietnam i Izrael, następne w planach Islandia i Portugalia. Największe podróżnicze marzenia to 
+            Nowa Zelandia, USA i Chile. Od pewnego czasu co raz bardziej pociąga mnie świat IT i stąd rozpoczęcie
+            nauki frontendu.
+        </p>
+        <p class="description__learning">
+            Na początek mojej nauki programowania zdecydowałem się na frontend i szkolenie stworzone przez 
+            Macieja Korsana i Macieja Aniserowicza czyli WTF: co ten forntend. Muszę przyznać, że jest to 
+            najlepsze szkolenie w jakim do tej pory brałem udział, bawię się wyśmienicie.<br>
+            Czego dokładnie się uczę:
+        </p>
+        <ul class="description__list">
+            <li class="description__list--item">HTML5</li>
+            <li class="description__list--item">CSS</li>
+            <li class="description__list--item">JavaScript</li>
+            <li class="description__list--item">GIT/GitHub</li>
+            <li class="description__list--item">Terminal</li>
+            <li class="description__list--item">Inne narzędzia wspomagające m.in.: node.js, SASS</li>
+        </ul>
+        <p class="description__feature">
+            Nie jestem jeszcze pewny jak się potoczy moja programistyczna przyszłość, ale na dziś chciałbym 
+            za parę lat zostać fullstack developerem. Po szkoleniu planuję dalszą naukę we własnym zakresie. 
+            Najpierw frameworki JS a później backend. 
+        </p>
+    </section>
+    <section class="socialmedia">
+        <h2 class="socialmedia__heading"></h2>
+        <a class="facebook" href="">GitHub</a>
+        <a class="facebook" href="">Instagram</a>
+        <a class="facebook" href="">Facebook</a>
+    </section>
+    </main>
     
 </body>
 </html>
