--- a/index.html
+++ b/index.html
@@ -1,63 +1,81 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moja wizytówka</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-    <main class="card">
-        <img class="avatar" src="javascript-lead.jpg" alt="zdjęcie" title="tu będzie moje zdjęcie">
-        <div class="content">
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body class="body body--js">
+    <label class="label">
+      <input class="checkbox checkbox--js" type="checkbox" id="checkbox" required />
+    </label>
+    <main class="card card--js">
+      <img
+        class="avatar"
+        src="programista.png"
+        alt="zdjęcie"
+        title="tu będzie moje zdjęcie"
+      />
+      <div class="content">
         <header class="person">
-        <h1 class="person__name">Tomasz Zawadzki</h1>
-        <p class="person__position">
+          <h1 class="person__name">Tomasz Zawadzki</h1>
+          <p class="person__position">
             uczeń frontendu
-        </p>
-    </header>
-    
-    <article class="me">
-        <h2 class="me__heading">O mnie:</h2>
-        <section class="description">
-        <h3 class="description__title">Co aktualnie robię:</h3>
-        <p class="description__myself">
-            Aktualnie przedstawiciel handlowy, który potrzebuje nauczyć się czegoś nowego 
-            co może doprowadzić w przyszłości do zmiany soposobu zarabiania na życie.
-            Moje zainteresowania to przede wszystkim sport. Sam gram w piłkę nożną, a jako kibic
-            lubię prawie każdą dyscyplinę sportu. Planuję zwiedzić cały świat. Ostatnie podróże to 
-            Wietnam i Izrael. Od pewnego czasu co raz bardziej pociąga mnie świat IT i stąd rozpoczęcie
-            nauki frontendu.
-        </p>
-    </section>
-    <section class="learning">
-        <h3 class="learning__heading">Proces mojej nauki:</h3>
-        <p class="learning__paragraf">
-            Na początek mojej nauki programowania zdecydowałem się na frontend i szkolenie stworzone przez 
-            Macieja Korsana i Macieja Aniserowicza czyli WTF: co ten forntend. <br>
-            Czego dokładnie się uczę:
-        </p>
-        <ul class="learning__list">
-            <li class="learning__list--item">HTML5</li>
-            <li class="learning__list--item">CSS</li>
-            <li class="learning__list--item">JavaScript</li>
-            <li class="learning__list--item">GIT/GitHub</li>
-            <li class="learning__list--item">Terminal</li>
-            <li class="learning__list--item">Inne narzędzia wspomagające m.in.: node.js, SASS</li>
-        </ul>
-        <p class="learning__paragraf">
-            Dalsze kroki po szkoleniu to frameworki JS, w przyszłości backend.
-        </p>
-    </section>
-    <section class="socialmedia">
-        <h3 class="socialmedia__heading">Gdzie mnie znajdziesz:</h3>
-        <a class="github"  href="""></a>
-        <a class="nstagram" href="">Instagram</a>
-        <a class="facebook" href="">Facebook</a>
-    </section>
-    </article>
-</div>
+          </p>
+        </header>
+
+        <article class="me">
+          <h2 class="me__heading">O mnie:</h2>
+          <section class="description">
+            <h3 class="description__title">Co aktualnie robię:</h3>
+            <p class="description__myself">
+              Aktualnie przedstawiciel handlowy z zamiarem wkroczenia do świata IT.
+              Po pracy gram w piłkę, trochę jeżdzę po świecie i szukam czego nowego
+              mogę się nauczyć.
+            </p>
+          </section>
+          <section class="learning">
+            <h3 class="learning__heading">Proces mojej nauki:</h3>
+            <p class="learning__paragraf">
+              Na początek mojej nauki programowania zdecydowałem się na frontend
+              i szkolenie stworzone przez Macieja Korsana i Macieja Aniserowicza
+              czyli WTF: co ten frontend. <br />
+              Czego dokładnie się uczę:
+            </p>
+            <ul class="learning__list">
+              <li class="learning__list--item">HTML5</li>
+              <li class="learning__list--item">CSS</li>
+              <li class="learning__list--item">JavaScript</li>
+              <li class="learning__list--item">
+                Inne: GIT, terminal, node.js, SASS
+              </li>
+            </ul>
+            <p class="learning__paragraf">
+              Dalsze kroki po szkoleniu to frameworki JS, w przyszłości backend.
+            </p>
+          </section>
+          <section class="socialmedia">
+            <h3 class="socialmedia__heading">Gdzie mnie znajdziesz:</h3>
+            <a
+              class="scialmedia__github"
+              href="https://github.com/tomek-zawadzki"
+              ><img class="logo" src="github-logo.png" alt="logo github"
+            /></a>
+            <a
+              class="scialmedia__instagram"
+              href="https://www.instagram.com/zawa1990/?hl=pl"
+              ><img class="logo" src="instagram-logo.png" alt="logo instagram"
+            /></a>
+            <a
+              class="scialmedia__facebook"
+              href="https://www.facebook.com/tomek.zawadzki.77"
+              ><img class="logo" src="facebook-logo.png" alt="logo facebook"
+            /></a>
+          </section>
+        </article>
+      </div>
     </main>
-    
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
