add CSS custom propeties and fix scss

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="body body--js">
+  
+      <button class="button button--js" type="checkbox" id="checkbox" required />TRYB</button>
    
     <main class="card">
         <header class="person">
