fixed JS code to dark mode

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="body body--js">
   
-      <button class="button button--js" type="checkbox" id="checkbox" required />TRYB</button>
+      <button class="button button--js">TRYB</button>
    
     <main class="card">
         <header class="person">
